# rag-trafico-vlc

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: main.py  models.py  qdrant_store.py  router_rag.py
docs/: resultados_tests.md
ingesta/: api_client.py  categorizer.py  embedder.py  scheduler.py
scripts/: test_router.py  verify_qdrant.py
tests/: test_api.py
